<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/new_login_gradients"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:theme="@style/AppTheme.NoActionBar">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="99dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:srcCompat="@drawable/allnewguideuslogo" />

    <TextView
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
