<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@drawable/new_login_gradients">





    <!-- Here you can replace it with your logo or brand name -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="330dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:contentDescription="@string/desc"
        android:padding="16dp"
        android:src="@drawable/ellitepng" />

    <EditText
        android:id="@+id/etEmailMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1.5"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="8dp"
        android:textColorHint="#ffffff"
        tools:targetApi="o" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />


    <EditText
        android:id="@+id/etPasswordMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1.5"
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/etPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:textColorHint="#ffffff"
        tools:targetApi="o" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />


    <Button
        android:id="@+id/btnlogin"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_login"
        android:clickable="true"
        android:contentDescription="@string/log_in"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#f16f7d"
        android:textSize="18sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnSignup"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_signup"
        android:clickable="true"
        android:contentDescription="@string/sign_up"
        android:focusable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvForgetPassword"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_weight="1.5"
        android:clickable="true"
        android:contentDescription="@string/forget_your_password"
        android:focusable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/forget_your_password"
        android:textColor="#fff"
        tools:text="@string/forget_your_password" />




</LinearLayout>