<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/new_login_gradients"
    tools:context=".PasswordActivity">

    <TextView
        android:id="@+id/forgetTextview"
        android:layout_width="272dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/please_enter_the_e_mail_address_to_reset_your_password"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPasswordEmail"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="343dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"

        android:layout_marginEnd="8dp"
        android:layout_weight="1.5"
        android:autofillHints=""
        android:background="@drawable/background_login"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetTextview" tools:targetApi="o" />

    <Button
        android:id="@+id/btnPasswordReset"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="119dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_login"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordEmail" />

</android.support.constraint.ConstraintLayout>